--- a/src/pages/posts/如何成为快乐高产的程序员.md
+++ b/src/pages/posts/如何成为快乐高产的程序员.md
@@ -2,43 +2,52 @@
 date: 2017/06/26
 ---
 
->阅读提示：本文篇幅较长，接近 1 万字，且有大量的链接，为了保证思维的连贯性，建议先通读一遍，再读链接的文章。
+<img src='/_image/image_2023-11-05-16-44-56.png'>
 
-## 前言 ##
+阅读提示：本文篇幅较长，接近 1 万字，且有大量的链接，为了保证思维的连贯性，建议先通读一遍，再读链接的文章。
+
+## 前言
+
 身为 IT 中人，我和我身边的朋友们有以下这些痛点：
 
-* 书上说的那些好习惯：早起、冥想、瑜伽、读书，总是坚持不下来。
-* 每天总会有乱七八糟的事情打乱规划，而这些乱入的工作由于涉及上层的诉求，优先级都挺高，更可怕的是，自己也逐渐习惯或适应了这种工作习惯。
-* 工作中越来越发现欠缺的知识太多，所以潜意识里面压力很大。
-* 有时候经常调整优先级，最终多头并发而普遍进展不大。
-* 工作与生活失衡，公司的工作量是按 200%~300% 来规划的，每天 15 个小时在公司，更少时间在家，回到家已经累成狗了。
-* 容易被其它事情分散注意力，特别是受情绪影响。
-* 计划的多且要求高，执行的时候觉得困难容易放弃。
-* 工作变化比较快，工作计划无法做定。比如突发会议，突发问题，突发需求，有时候还要突然要和同事谈心…
-* 宠物或孩子生病了要照顾。要上班还要健身，感觉一天没做什么事情就过去了。
-* 以前跟别人学过时间管理，也实践过，但是断了之后就没有办法继续坚持。
+-   书上说的那些好习惯：早起、冥想、瑜伽、读书，总是坚持不下来。
+-   每天总会有乱七八糟的事情打乱规划，而这些乱入的工作由于涉及上层的诉求，优先级都挺高，更可怕的是，自己也逐渐习惯或适应了这种工作习惯。
+-   工作中越来越发现欠缺的知识太多，所以潜意识里面压力很大。
+-   有时候经常调整优先级，最终多头并发而普遍进展不大。
+-   工作与生活失衡，公司的工作量是按 200%~300% 来规划的，每天 15 个小时在公司，更少时间在家，回到家已经累成狗了。
+-   容易被其它事情分散注意力，特别是受情绪影响。
+-   计划的多且要求高，执行的时候觉得困难容易放弃。
+-   工作变化比较快，工作计划无法做定。比如突发会议，突发问题，突发需求，有时候还要突然要和同事谈心…
+-   宠物或孩子生病了要照顾。要上班还要健身，感觉一天没做什么事情就过去了。
+-   以前跟别人学过时间管理，也实践过，但是断了之后就没有办法继续坚持。
 
 如果你也存在这些痛点，期望本文对你有所启发。
 
 ---
 
-## 我的经历 ##
-大约从上大学时起，我开始关注时间管理，这些年读过许多时间管理类书籍比如《搞定》系列，《小强升职记》，《奇特的一生》，《晨间日记的奇迹》，《高效能人士的七个习惯》，《暗时间》等等；尝试过许多方法：重要紧急四象限法，GTD，ZTD，番茄工作法，连续分段时间管理法（莫法特休息法），个人看板等；用过许多的工具：比如 Doit.im，Any.do，Things，滴答清单，CLEAR，Wunderlist，Omni Focus等。道理懂得很多，却还是过不好自己这一生。
+## 我的经历
+
+大约从上大学时起，我开始关注时间管理，这些年读过许多时间管理类书籍比如《搞定》系列，《小强升职记》，《奇特的一生》，《晨间日记的奇迹》，《高效能人士的七个习惯》，《暗时间》等等；尝试过许多方法：重要紧急四象限法，GTD，ZTD，番茄工作法，连续分段时间管理法（莫法特休息法），个人看板等；用过许多的工具：比如 Doit.im，Any.do，Things，滴答清单，CLEAR，Wunderlist，Omni Focus 等。道理懂得很多，却还是过不好自己这一生。
 在实践多年后，我才发现，时间管理不是一个独立的模块，它和目标管理，效率管理，能量管理，注意力管理，情绪管理等紧密关联，形成一套「个人管理」的完整体系。网络上也有很多时间管理的原则，方法和技巧。而这篇文章挂时间管理之名，行个人管理之实，如果能让您跳出传统时间管理的限制，对个人管理有一个宏观的认识，甚至，如果本文分享的一些实践，能在您实现丰盈人生的过程中起到一些作用，我将感到十分荣幸。
 
-### 我之前的状态 ###
+### 我之前的状态
+
 2015 - 2016 年，我在创业公司做技术合伙人，刚开始充满新鲜刺激，后面更多的是压力和焦虑，不知不觉就掉入了时间管理的陷阱，最糟糕的时候的状态是：
->早上 8 点起床，跑步，吃早餐，9：30 出门，10：30 到公司，午饭时间不固定，也不一定休息，下午什么时候困了就趴一会儿，晚上 18：00 - 19：00 在公司附近吃晚饭，由于白天有太多「杂」事，晚上团队都回去了，正好继续写代码或学习，到 22：00 左右离开公司，22：30 到家，老婆通常会买好周黑鸭等我，到家孩子已经睡了，和老婆分享一下工作的趣事和糟心事，老婆分享一下带孩子的趣事和糟心事，收拾好差不多凌晨 1 点多入睡。
+
+> 早上 8 点起床，跑步，吃早餐，9：30 出门，10：30 到公司，午饭时间不固定，也不一定休息，下午什么时候困了就趴一会儿，晚上 18：00 - 19：00 在公司附近吃晚饭，由于白天有太多「杂」事，晚上团队都回去了，正好继续写代码或学习，到 22：00 左右离开公司，22：30 到家，老婆通常会买好周黑鸭等我，到家孩子已经睡了，和老婆分享一下工作的趣事和糟心事，老婆分享一下带孩子的趣事和糟心事，收拾好差不多凌晨 1 点多入睡。
 
 现在回头看简直是瞎忙，用忙碌来逃避思考。那 9 个月，长了好多白头发，后来体检下来，阳性结果和异常情况多了 6 项。
 
-### 现在的状态 ###
+### 现在的状态
+
 我现在理想的一天是这样的：
->5 点起床，唤醒身体，写晨间日记，冥想，工作和学习到 8 点。和爱人一起准备早餐，和孩子们一起用餐，收拾洗漱，9 点出门。9 点半到公司，专注地工作到 12 点。午餐和午休，14：00 开始工作和学习，到 18：30 离开公司。18：30 到家，吃晚饭。19：00 带孩子去公园玩，顺便锻炼身体。21：00 点回家，跟孩子们一起洗澡，讲故事，22：00 上床睡觉。
+
+> 5 点起床，唤醒身体，写晨间日记，冥想，工作和学习到 8 点。和爱人一起准备早餐，和孩子们一起用餐，收拾洗漱，9 点出门。9 点半到公司，专注地工作到 12 点。午餐和午休，14：00 开始工作和学习，到 18：30 离开公司。18：30 到家，吃晚饭。19：00 带孩子去公园玩，顺便锻炼身体。21：00 点回家，跟孩子们一起洗澡，讲故事，22：00 上床睡觉。
 
 现在几乎实现了，通常误差在半小时左右。
 
-### 我的改变之路 ###
+### 我的改变之路
+
 回头来看，我的时间管理大概经历了几个阶段：
 **时间记录**
 首先要知道我的时间都花到了哪里，记录时间一段时间后，我发现除了用于分析外，还提高了我对时间的感知能力。不看表都能把时间猜的八九不离十。我当时使用的是一个付费 APP 「时间块」。
@@ -52,9 +61,9 @@ date: 2017/06/26
 **培养习惯**
 如果您想更多地了解习惯培养，可以先读一下我之前写的文章：
 
-* [你不是意志力差，只是不懂习惯的力量](http://mp.weixin.qq.com/s/7rdmXeaSsZbf6cmFoHG5vw)
-* [培养习惯，我有三条心得](http://mp.weixin.qq.com/s/DiYLv2ONOnO8eJ8dim2X-Q)
-* [如何改掉你的坏毛病](http://mp.weixin.qq.com/s/1DWtxRwHF9pTIs9I7R-cQw)
+-   [你不是意志力差，只是不懂习惯的力量](http://mp.weixin.qq.com/s/7rdmXeaSsZbf6cmFoHG5vw)
+-   [培养习惯，我有三条心得](http://mp.weixin.qq.com/s/DiYLv2ONOnO8eJ8dim2X-Q)
+-   [如何改掉你的坏毛病](http://mp.weixin.qq.com/s/1DWtxRwHF9pTIs9I7R-cQw)
 
 最近，又有一点新体会，要培养拥抱变化的习惯。过去的 30 年，我一直用错误的方式在拿筷子，就是那种会用食指指着对面的人的拿法，我的家人曾经提醒过我很多次，我都不以为然，因为我认为只有老家才会在意这个，而我又很少回老家。直到上一次，西安的一位同事给我提反馈说我吃饭的时候指着他，我才意识到这可能是一个全球性的用餐礼仪，估计只要用筷子的地方都会在意这个，于是我决定要改变 - 学会正确的用筷子的姿势。我买来花生，开始刻意练习，把筷子放桌上，拿起，夹一颗花生放嘴里，放下筷子。一直重复这个动作，超出我期望的是，大约 15 天以后，我就可以熟练地用正确的姿势使用筷子了。这让我感到十分惊讶，30 年的习惯居然可以半个月说改就改了。于是，我冒出了一个想法，改变的能力是不是也可以刻意练习呢？于是我开始尝试用左手拿筷子，没想到 3 天以后我就可以正常进食了，现在我又开始用左手写字了，这是培养拥抱变化的习惯呢。
 
@@ -62,32 +71,33 @@ date: 2017/06/26
 在培养习惯的过程中，我发现 30 天挑战是一个很有效的方式，30 天专注于一个目标。
 这一年来，我完成了如下的 30 天挑战：
 
-* [早睡早起](http://mp.weixin.qq.com/s/wC2ze51CxF-Diq0GaDSc1g)
-* 跑步 5 公里
-* 读书 2 小时
-* 记录时间
-* 晨间仪式（[晨间日记](http://mp.weixin.qq.com/s/1esgc6vbFF6m6c2dtDpmjA)，唤醒身体，自我暗示，复盘等）
-* 冥想
-* 懂你英语口语练习
-* 薄荷阅读英文读物
-* 积累幽默素材
-* 视觉元素练习
-* 写一篇文章
+-   [早睡早起](http://mp.weixin.qq.com/s/wC2ze51CxF-Diq0GaDSc1g)
+-   跑步 5 公里
+-   读书 2 小时
+-   记录时间
+-   晨间仪式（[晨间日记](http://mp.weixin.qq.com/s/1esgc6vbFF6m6c2dtDpmjA)，唤醒身体，自我暗示，复盘等）
+-   冥想
+-   懂你英语口语练习
+-   薄荷阅读英文读物
+-   积累幽默素材
+-   视觉元素练习
+-   写一篇文章
 
 当然也有一些没有完成的：
 
-* 瑜伽
-* Sharp Eyes（一种训练眼睛以提高阅读速度的方法）
-* Photo Reading - 影像阅读
-* 零秒思考
-* 结构化思考
+-   瑜伽
+-   Sharp Eyes（一种训练眼睛以提高阅读速度的方法）
+-   Photo Reading - 影像阅读
+-   零秒思考
+-   结构化思考
 
 通过 30 天挑战，培养习惯变得容易了，小伙伴们互相激励，遇到困难一起解决。也让我更能体会到哪些东西对我更有用，更有价值，哪些对我无用，应该放弃而不觉得可惜。
 
 **刻意练习**
 养成了早睡早起的习惯后，时间就多了起来，如果不能有效利用，白白浪费多可惜了，所以我用这些时间来学一些实用的技能。比如，视觉引导，幽默，写作等。
-* [是时候停止找捷径了，开始练习吧](http://mp.weixin.qq.com/s/KaoU81IWUJH_kMaIB2UVLw)
-* [30 天绘画练习，我经历了这三个阶段](http://mp.weixin.qq.com/s/xi-SYWekIcrJ1VuYCGHwiA)
+
+-   [是时候停止找捷径了，开始练习吧](http://mp.weixin.qq.com/s/KaoU81IWUJH_kMaIB2UVLw)
+-   [30 天绘画练习，我经历了这三个阶段](http://mp.weixin.qq.com/s/xi-SYWekIcrJ1VuYCGHwiA)
 
 **学以致用**
 学了东西一定要尽快投入使用，一方面可以检验是否有实用价值，值不值得继续学习，另一方面也可以通过使用获得成就感，强化学习动机。我学的各种技能都会立马用起来，比如杂耍球，我应用到演讲开场讲需求变化的本质，在培训中用来讲刻意练习，在家里用来活跃气氛。还有幽默技能和视觉技能也在工作和生活中频繁使用。
@@ -96,16 +106,18 @@ date: 2017/06/26
 
 ![](/_image/2017-06-26-15-34-08.jpg)
 
+## 认知升级
 
-## 认知升级 ##
-### 从时间管理上升到个人管理 ###
+### 从时间管理上升到个人管理
+
 重要紧急四象限的一个重要基础 - 有清晰的目标。没有目标，怎么判断哪个任务更重要？所以就无法尽早处理好重要的事情，直到所有事情都变成紧急的事情，陷入不停救火的境地。
 你可能会早上起来了，时间多起来，但不知道干什么，又用无聊的事情来填充，或者被更多低价值的工作填满，虽然能做更多了，但并没有让你对生活更满意，慢慢便放弃了早起的习惯。如果没有对目标的一个全景图，很容易迷失在每天繁琐的事务上。
 
 个人管理和企业管理非常相似，也需要有自己的使命，愿景和价值观。
 
-#### 使命 ####
->身体力行地影响他人做出积极性的改变。
+#### 使命
+
+> 身体力行地影响他人做出积极性的改变。
 
 我非常幸运，浑浑噩噩或了 30 年，在而立之年找到了我的使命。说说我是如何找到的，希望对您有所启发。
 首先我用《优势识别器》识别出我的五大优势主题，然后从程序员转换跑道成了创业者；几个月后我又做了优势职业测试，结果是教师和激励师，于是又换道到培养者（培训师、教练）。在外界的反馈中，不断强化对我所做工作的认同。
@@ -116,58 +128,70 @@ date: 2017/06/26
 如果你认为学了编程就要一辈子写代码，就大错特错了。编程只是一项技能，一项人人都可以学会的技能，我热爱编程，我想一辈子写代码，但我并不想一辈子只写代码。
 
 上海的耳东陈同学就是这样一个例子：
->我在做完【优势利用度】的测评之后得知自己的优势是 creator & teacher ,于是开始思考如何发挥自己的优势，我开始尝试做公司新员工和实习生的培养工作，设计了一系列相关的分享，做了一个公司内部的有价值资料导航，在做这些事情的时候会发现自己很投入，很快乐，能够充分利用自己的优势，与别人建立连接，得到了大家的认可，很有成就感。
+
+> 我在做完【优势利用度】的测评之后得知自己的优势是 creator & teacher ,于是开始思考如何发挥自己的优势，我开始尝试做公司新员工和实习生的培养工作，设计了一系列相关的分享，做了一个公司内部的有价值资料导航，在做这些事情的时候会发现自己很投入，很快乐，能够充分利用自己的优势，与别人建立连接，得到了大家的认可，很有成就感。
 
 除了在公司做一名职业程序员，你有没有想过你还可以做咨询，培训，教练，售前，独立开发者，创业家等等...
 在一个领域做到顶尖是极难的，但在两个领域做到不错就要有趣且容易的多。比如 GitChat 里有一位爱发红包的听众，曾经是一名程序员，现在是一名创业者，做电商工具，不仅给自己用，还做服务，据说自己的店铺月营业额两三百万。[More...](https://laravel-china.org/topics/3748/hangzhou13k-25k-taobao-sellers-recruit-php-full-siege-lion-2-apprentice)
 还有程序员去做跨境电商，也是做得风生水起~
 
-#### 价值观/原则 ####
+#### 价值观/原则
+
 我们每天都会面临大量的决策，原则可以帮助我们极大提高效率。我讲一个故事：
->在一次公司的毕业生培训上，领导要做一个演讲，但时间快到了，领导堵车了还在路上，大约需要 10几分钟，这时负责组织的两位小伙伴就在商量，是等呢还是等呢？两个人拿不定注意，征求我的意见是，我说做这个决策很简单，我有两个原则：一是不要惩罚守规则的人；二是培训应当以学员为中心。惩罚守规则的人？听起来很荒唐，但我保证你的公司里每天都在发生，比如开会，早到的要等着迟到的，人到齐了才开始，是不是？第二天原则是说以学员为重，将领导的的演讲和下一个演讲调换一下，哪怕领导来了得多等半小时。当然，如果你的原则是：领导高于一切，因为领导单位时间内创造的价值更大。那就让大家等者，牺牲学员的时间，节省领导的时间。
+
+> 在一次公司的毕业生培训上，领导要做一个演讲，但时间快到了，领导堵车了还在路上，大约需要 10 几分钟，这时负责组织的两位小伙伴就在商量，是等呢还是等呢？两个人拿不定注意，征求我的意见是，我说做这个决策很简单，我有两个原则：一是不要惩罚守规则的人；二是培训应当以学员为中心。惩罚守规则的人？听起来很荒唐，但我保证你的公司里每天都在发生，比如开会，早到的要等着迟到的，人到齐了才开始，是不是？第二天原则是说以学员为重，将领导的的演讲和下一个演讲调换一下，哪怕领导来了得多等半小时。当然，如果你的原则是：领导高于一切，因为领导单位时间内创造的价值更大。那就让大家等者，牺牲学员的时间，节省领导的时间。
 
 价值观本身就没有高低对错，但只有拥有价值观和原则，才能更好更快地做出决策。
 
-#### 愿景 ####
->我是一名专业的培养者，我灵活运用培训，教练，咨询，引导，辅导等技术，身体力行地影响他人做出积极的改变！
-我生活高效，规律且健康！
-我打通了输入输出，持续地成长和变现！
+#### 愿景
+
+> 我是一名专业的培养者，我灵活运用培训，教练，咨询，引导，辅导等技术，身体力行地影响他人做出积极的改变！
+> 我生活高效，规律且健康！
+> 我打通了输入输出，持续地成长和变现！
 
 这个是我的愿景，同样每天早上通过书写暗示自己。用第一人称一般现在时，更加容易被潜意识接收到。还有一个技巧是：假装是，直到真的是。标签对人的行为有很大的影响，曾有个实验对比了两组人，一组直接让捐赠骨髓，大部分人不愿意，另一组先献血，再邀请捐赠骨髓，大部分人都同意了，解释是因为献血后就有了「捐赠者」这个标签，就应该做捐赠的事。我没有考证实验是否严谨，据我个人经验，当我假装自己是一个自律的人，表现得自律，身边的人都认为我是自律的人时，我确实更加自律了。
 
-#### 目标 ####
+#### 目标
+
 对应愿景，我订立了三年目标：
 
-* 成为专业的培养者，可以教授培训，教练，引导课程
-* 保持身体健康，体重 125 斤，体脂 10%，能做二级的街头健身动作
-* 年入百万，其中 50% 来自睡后收入
+-   成为专业的培养者，可以教授培训，教练，引导课程
+-   保持身体健康，体重 125 斤，体脂 10%，能做二级的街头健身动作
+-   年入百万，其中 50% 来自睡后收入
 
 所以我现在学习和实践培训，教练，引导等技术，运动，写作都是为了这几个目标服务的。
 我不要做燃烧自己点亮别人的蜡烛，我认为做一个文化商人并不可耻，我们作为知识工作者，值得拥有更好的生活，不是吗？
 同时，作为一名培养者，「有钱」也能增加非职权影响力。想想同样一句话，从乞丐嘴里说出来，和从马云嘴里说出来，哪个更能让人信服？
 
-#### 项目 ####
+#### 项目
+
 为了实现这些目标，我要在一段时间内专注在一件事情上，这就是项目。围绕这些目标，我建立了暑期特训营，公开课，企业内训，公众号，社区等项目。在建立项目时我会认真思考这个项目实现什么目标，以及项目之间的优先级关系。
 
-#### 任务 ####
+#### 任务
+
 任务是我每天处理的具体的事务，有可能是领导安排的紧急的工作，可能是陌生人的请求，可能是老婆让我取快递。在建立任务时我会看它属于哪个项目，这样就能保证做是每一件事都是为目标服务的。
 
 ###什么是成功？###
 什么样的人生是成功的人生？我把这个问题转换为：什么样的一天是成功的一天？
->怀着对新的一天的期待愉快地起床，怀着对一天工作满满的成就感心满意足地上床，就是成功的一天。
+
+> 怀着对新的一天的期待愉快地起床，怀着对一天工作满满的成就感心满意足地上床，就是成功的一天。
 
 而我相信「你怎样过一天，就怎样过一生」，只要生命中大部分的每一天都是成功的，那我就认为这一生也是成功的了。
 
-### 工作是人生最幸福的事 ###
+### 工作是人生最幸福的事
+
 稻盛和夫在《干法》里提到：「工作是人生最幸福的事」。当初我读到的时候，我心里是拒绝的，当时我心里想的是，万恶的资本家当然希望我们都心甘情愿地为他们工作。直到后来我意识到：**工作不等于上班**。工作除了能带给我们稳定的收入，更重要的是给我们极大的成就感。我清晰地记得在休陪产假的那段时间多么的空虚无聊，多么想回到工作岗位上创造价值。而现在，我所有的工作都是围绕使命「影响他人做出积极性的改变」，这让我对每一天都充满期待。
 
-### 工作和生活的平衡 ###
+### 工作和生活的平衡
+
 所谓工作和生活平衡，往往让人进入一个误区，就是在生活和工作中间找到一个平衡点，然后就可以万事大吉。其实在每一刻，确实存在这样一个点，但在生命长河中，这个点却是动态变化的，如果生活在左，工作在右，那中间不是一条直线，而是一条左右波动的曲线。家里刚有孩子的时候，当然将更多精力投入到家庭中；刚换了新的工作后，当然要把更多精力投入到工作中。如果一直在纠结要保持所谓的平衡，就会平添很多痛苦。
 
-## 原则 ##
+## 原则
+
 我在这里想分享我认为最重要的三条个人管理原则，我在每日反思时，重新审视前一天所做的一切是不是符合这些原则。
 
-### 主动而不是响应 ###
+### 主动而不是响应
+
 我们每天被很多事情打乱原本的计划，响应各种邮件和消息。
 通过时间记录，很容易发现，我们一天可能会响应老板，同事，家人，网友，快递员等。原本计划的美好的一天，被各种事情切割成了碎片时间。
 为什么要响应呢？
@@ -178,41 +202,48 @@ date: 2017/06/26
 当我采取了主动工作的原则后，我不再在第一时间回复邮件和消息，也不会在第一时间回复同事的请求，这些事情对他们来说优先级很高（然而并没有他们声称的那么高），在我这里的优先级却佷低，我会用自己固定的节奏去处理这些请求。久而久之，他们找我得不到立即处理，于是就换找别人了。
 你可能会想，那这样的话，你的老板和同事甚至家人，会不会觉得你不可靠呢？确实，目标感强的人有时候会让身边的人不舒服，没关系，因为我的目标并不是让别人舒服。而且因为采取了一系列的实践（你将在后面看到它们），他们最终会认识到，这种交互模式实际上是双赢的。
 
+### 二八原则
 
-### 二八原则 ###
 专注在 20% 能创造 80% 价值的工作，我会注意以下几点：
 
-* 优先做价值更大的工作
-* 耗时的工作并不等同于重要的工作
-* 不重要的工作做得再好，也不会变得重要
-* 做团队所有人都不愿意做，但又必须要完成的工作
+-   优先做价值更大的工作
+-   耗时的工作并不等同于重要的工作
+-   不重要的工作做得再好，也不会变得重要
+-   做团队所有人都不愿意做，但又必须要完成的工作
 
 在家庭中，[爱的五种语言](http://mp.weixin.qq.com/s/gWaAP4UAGxJgA3EbcwCdxw)就是对二八原则的应用，用对方喜欢而不是自己喜欢的方式来爱对方，才能事半功倍。
 
-### 复利 ###
+### 复利
+
 尽量做能产生复利的工作，就是那些一次投入，长期受益的工作。写文章，录视频，创建在线系统，写自动化脚本等。就拿写代码来说，我也要优先写被更多人使用到的功能，或者能提升团队效率的基础设施。
 
-### 合理地专注和多任务 ###
+### 合理地专注和多任务
+
 网上有大量关于专注和多任务的讨论，这些讨论就像豆腐脑应该吃甜的还是咸的一样毫无意义 - 当然是吃咸的~ 开个玩笑。我认为，脱离具体情境谈方法都是不科学的，对于需要占用大量认知资源的工作，一次只做一件。比如阅读，听书（如果我一边走路一边听书，就跟没听过一样）。对于不需要占用大量认知资源的工作，可以并行处理，比如推着孩子在公园里散步，一边走一边和老婆聊天。
 
-### 拖延是朋友 ###
+### 拖延是朋友
+
 很多人多年以来一直奋战在战拖一线。而我认为，存在即是合理。比如说懒惰，如果人不懒惰的话，就不会发明汽车和电梯，对吧？
 那么，人为什么会拖延呢？我觉得拖延是一个信号，说明显性意识和潜意识的目标是不一致的，所以我通过冥想和书写暗示的方式去对齐目标。
 我一直拖延的事，可能就是我不感兴趣的，不为我的目标服务的事。我大可放弃它不做，比如去年我一时冲动接了一个翻译的项目，后来实在痛苦，不断拖延，我干脆就坦诚地和编辑沟通，换了另一位译者。这起码为我节省了几百个小时的时间，难道不应该谢谢我的拖延这位朋友吗？
 
-## 实践 ##
+## 实践
+
 有了以上原则，可以帮我快速做出决策，但真正要落地执行，还需要很多具体的实践。
 
-### 工作 ###
-#### 可视化工作成果 ####
+### 工作
+
+#### 可视化工作成果
+
 将工作成果可视化出来，不仅可以给自己更大的成就感，也会给团队，给领导增加对你的信任。开发了多少故事点，有多少用户使用，客户的表扬信，培训的学员反馈，培训的现场报道等都可以可视化工作成果。注意要可视化的是成果，而不是有多么努力，加了多少班。
 
-#### 专注 ####
+#### 专注
+
 频繁的任务切换会导致大量的信息加载到工作记忆中，不仅对效率有极大的影响，而且两个做到一半的任务都没有对外交付价值，造成等待的浪费（所有的半成品都是浪费）。为了保持专注，我有如下实践：
 
-* 关闭各种通知
-* 保持桌面整洁
-* 使用降噪耳机
+-   关闭各种通知
+-   保持桌面整洁
+-   使用降噪耳机
 
 冥想练习被证明是有效的提升专注度的方法，我的体会是，冥想并不是减少走神的次数，而是提升觉察力，让我更快地意识到自己走神了，从而迅速回到主题上。
 
@@ -224,119 +255,142 @@ date: 2017/06/26
 
 番茄工作法也是有效提升专注度的手段，我用了很长时间，现在没有用任何软件，凭身体的感觉，差不多 1 个小时一个休息一次。
 
-#### 零秒思考 ####
+#### 零秒思考
+
 我们的大脑其实思考的速度非常快，很多时候我们说要思考一下，其实只是先放着不管，等快到了截止日期才真正去思考。零秒思考的方法是利用潜意识进行快速思考，做法很简单，就是写好一个问题，给自己倒计时一分钟来思考，列出关键点。第一次看到时我是抱着怀疑态度的，但试了几个问题我就发现答案很靠谱，因为最重要的东西都会在第一时间跳出来。我在工作和生活大量使用这个方法，比如做计划，准备演讲，列文章提纲等。
 
 ![](/_image/2017-06-26-13-38-45.jpg)
-#### 莫法特休息法 ####
+
+#### 莫法特休息法
+
 同一项工作做的时间长了，效率就会降低，一两个小时之后，做另外一项工作，给大脑一些新鲜的刺激。据说莫法特的书房里有三张书桌，分别是三个不同的项目，在一张上工作累了，休息一下，就进入另一张开始工作。脑力工作者需要的休息并不是睡很多觉，而是换脑子，体力工作者每天消耗了大量体力，才需要用睡觉的方式来补充体力。
 我会把写作，沟通，写代码，课程设计，填报销，处理邮件等工作穿插进行。
 
-### 健康 ###
-
+### 健康
 
 ![](/_image/2017-06-26-14-42-59.jpg)
 
 一直以为从《21 天精通 C++》到《颈椎康复指南》是个玩笑，直到去年团队的一位同事因为颈椎问题严重到必须休假治疗，我也感觉到久坐后后背和脖子特别难受，一度影响到工作状态。于是我增加了跑步、瑜伽等运动的时间。几个月下来，基本不影响工作了。如何在繁忙的工作和生活中保持身体健康呢？我有如下实践：
 
-#### 亲子即健身 ####
+#### 亲子即健身
+
 在去公园遛娃的时候，顺带做引体向上，俯卧撑，仰卧起坐等动作。在家里我会让儿子们坐到我的背上做负重平板撑。
 
-#### 社交即健身 ####
+#### 社交即健身
+
 和朋友约跑是我的一大爱好，找到志同道合的小伙伴，一边跑步一边交流跑步经验，工作生活的近况。
 
 ![](/_image/2017-06-26-13-39-27.jpg)
 
-#### 工作即健身 ####
+#### 工作即健身
+
 大部分公司都有简易的健身器材，工作累了就去锻炼一下，既能醒脑有能强身。当然，因为做了前面提到的那些工作实践，所以不怕被人说不务正业，工作量不饱和等。
 
 ![](/_image/2017-06-26-13-39-51.jpg)
 
-#### 通勤即健身 ####
+#### 通勤即健身
+
 我家离公司步行在 30 分钟左右，我基本是用快走的方式健身，在路上不带耳机，减少输入，还经常会冒出很好的想法。
 公司在 7 楼，我一般都是走楼梯上去，有时甚至跑上去，有一次七楼刚出来被同事叫住，说电梯关门的时候看到我，没想到一开门又看到我~
 
-### 饮食 ###
+### 饮食
+
 如何保持高的睡眠质量，同时我对吃肉和蔬菜是毫不留情的。
 
-#### 吃好早餐 ####
+#### 吃好早餐
+
 人在肚子饿的状态，身体会自动降低对热量的消耗。而相对于脂肪而言，肌肉消耗的热量更多，所以身体会优先分解肌肉，而这就进入了恶性循环，更加降低了基础代谢率。所以如果你想减脂增肌，一定不能饿肚子。丰富的早餐可以除了可以带来极大的幸福感，还能减少午餐的摄入量，让下午更清醒，更有效率。
 
-#### 晚餐清淡，不吃夜宵 ####
+#### 晚餐清淡，不吃夜宵
+
 吃夜宵会增加肠胃蠕动，影响睡眠质量。
 
-#### 不喝酒和饮料 ####
+#### 不喝酒和饮料
+
 酒精和刺激性饮料都会影响睡眠质量，我连普通饮料都不喝，因为不利于嗓子保护。虽然有时候在社交场合只吃肉不喝酒显得有点另类，但我相信人们是因为我的价值而欣赏我，而不是我的酒量。
 
-### 家庭 ###
-#### 融入彼此的圈子 ####
+### 家庭
+
+#### 融入彼此的圈子
+
 和爱人培养更多的共同语言，让交流变得更有效，比如一起读一本书，交流心得。一起做手工皂，一起做早餐，一起买菜，甚至一起洗漱。两个人的共同经历越多，共同会议和共同语言也越多。我们一起约朋友吃饭，一起参加大会演讲，一起参加视觉引导，一起参加黑客马拉松，一起顶着寒风去静滩… 这样做，无形中就增加了很多彼此陪伴的时间，从而节省出需要单独陪伴做感情交流的时间？你 Get 到了吗？
 
 ![](/_image/2017-06-26-13-41-39.jpg)
 
-#### 事务即亲子 ####
+#### 事务即亲子
+
 除了爱人，还有对孩子的陪伴和教育。我将其融入到生活中的每一件事里，比如洗澡的时候，我会用两个手指模拟外星生物走独木桥，不小心掉水里，培养他们的想象力。让他们参与调奶，培养精心动作，带着他们去取快递，进门出门就培养了礼貌的习惯。
 
-### 学习 ###
-#### 无动机不学习 ####
+### 学习
+
+#### 无动机不学习
+
 学习包含三个维度，动机、内容和交互。我认为最重要的是动机，信息时代海量信息可以即刻获取，各种先进的技术也增强了学习的体验和便利性。唯有动机是最难的，大部分人不是因为兴趣，而是因为焦虑而学习，为了学习而学习，学完记不住，记住了做不到，不能学以致用。我的方式是输出倒逼输入，先找个目标，比如承诺一个演讲，培训，文章等，再去学习，这样效率和效果都会好很多。那种走在路上有事没事就用「得到」听本书刷虚拟的成就感的方式并不适合我。
 
 更多的学习方法可以看这篇文章：
 
-* [如何培养终身学习者](http://mp.weixin.qq.com/s/KBoi0O5gRoxeSSPL29_bcQ)
-* [离开了老师，我是这样高效学习的](http://mp.weixin.qq.com/s/O9CcPOi1n9kCipT6bBj5sQ)
-* [如何不停向自己学习](http://mp.weixin.qq.com/s/p0PqTUItqG5QeXYm8CfAEg)
+-   [如何培养终身学习者](http://mp.weixin.qq.com/s/KBoi0O5gRoxeSSPL29_bcQ)
+-   [离开了老师，我是这样高效学习的](http://mp.weixin.qq.com/s/O9CcPOi1n9kCipT6bBj5sQ)
+-   [如何不停向自己学习](http://mp.weixin.qq.com/s/p0PqTUItqG5QeXYm8CfAEg)
 
-## 走过的弯路 ##
+## 走过的弯路
+
 现在回顾，在我实践时间管理的过程中，也走了很多的弯路，在此与您分享。
 
 ### 过多地关注工具
+
 我相信很多人和我一样是工具控，对工具关注太多就是只见树木不见森林，所以我要提醒您不要跟我一样捡了芝麻丢了西瓜。
 
-### 对工作时间的分析太晚 ###
+### 对工作时间的分析太晚
+
 之前做时间记录，工作的内容只记了「工作」这个分类，没有具体到做的事情，大部分的精力放到了业余时间的优化上。直到最近我才开始用柳比歇夫的「时间记录法」，对工作花费的时间进行分析，让我看到了巨大的提升空间。
 德鲁克在《二十一世纪的管理挑战》中提出知识工作者最难以管理，很多企业采用结果到导向的方式进行宏观管理，但作为知识工作者，我们自己应该对自己进行微观管理，才能提高生产力。
 
-### 高估了网络学习的价值 ###
+### 高估了网络学习的价值
+
 我曾参加过一些「名人」的私密群，因为信息量太大很快就退掉了。付费订阅的「樊登读书会」，「五分钟商学院」，「通往财富自由之路」，包括「速度训练营」，「时间管理训练营」等都没什么用，几百人的大群，每天上千条信息，平添许多焦虑。
 对我而言，大部分有用的知识还是来自书本。
 
-### 忽视了个人助理的作用 ###
+### 忽视了个人助理的作用
+
 曾在去年 10 月尝试过了解到个人助理服务，当时觉得真人个人助理还挺新奇的，不过当时浅尝辄止。直到最近重读《每周工作 4 小时》，里边提到一个节省时间的技巧是外包。我才又开始尝试，昨天让助理帮我预订了出差的机票和酒店，还有想吃的水果，刚开始用需要输入一些信息，久了有了默契，就可以一键完成很多事情：比如「给家里买 50 元的时令水果」，给「我和老婆各充值 100 元话费」等。还有之前大量写文章的时候，一大痛点就是要发布到公众号，简书，知乎专栏，头条号等多个平台，这些事情都是重复且耗时的，我准备找解决方案，将其外包出去。最近在尝试的有 VAhut，助理来也。通过分析自己的时间使用情况，将最好的精力放在 20% 最有价值的工作上，另外的 80% 进行精简或外包。将会极大地提供价值创造的速度。
 
-## 推荐书籍 ##
+## 推荐书籍
+
 这一年多在学习和实践个人管理的过程中，读了几十本相关的书籍，挑选我认为最有帮助的一部分分享给大家：
 **学习类**
 
-* 好好学习
-* 学习之道
-* 这样读书就够了
+-   好好学习
+-   学习之道
+-   这样读书就够了
 
 **时间管理类**
 
-* 每周工作 4 小时
-* 每天最重要的两小时
-* 最重要的事情只有一件
+-   每周工作 4 小时
+-   每天最重要的两小时
+-   最重要的事情只有一件
 
 **习惯培养**
 
-* 习惯的力量
-*  刻意练习
-* 练习的心态
+-   习惯的力量
+-   刻意练习
+-   练习的心态
 
 ** 家庭 **
 
-* 爱的五种语言
-* 斯托纳夫人的自然教育
-* 非暴力沟通
+-   爱的五种语言
+-   斯托纳夫人的自然教育
+-   非暴力沟通
 
 ** 励志类 **
 
-* 富兰克林自传
-* 奇特的一生
-* 书都不会读，你还想成功
+-   富兰克林自传
+-   奇特的一生
+-   书都不会读，你还想成功
 
 ---
+
 ## 后记
+
 本文较长，感谢您耐心读到最后。我先分享了我从糟糕的状态转变到良好状态的经历，然后是对时间管理的认识要上升到个人管理。之后是我认为很重要的一些原则，以及这些原则在工作，生活中应用的一些实践。最后是我走过的一些弯路以及推荐的基本书籍。
 我没有直接回答文章开头的痛点该如何解决，因为每个人的具体情况不一样，我希望您看完本文，能够有所启发，找到自己的答案。如果还是很困惑，我感到非常抱歉，期望您能留言与我交流。
