--- a/src/pages/posts/如何让自己变得豁达.md
+++ b/src/pages/posts/如何让自己变得豁达.md
@@ -1,13 +1,18 @@
-![](./_image/2017-03-16-08-25-22.jpg)
+---
+date: "2017-03-16"
+---
+
+<img src='/_image/image_2023-11-05-17-03-58.png'>
 
 你是否常常因为一些小事，被你的爱人，你的孩子，你的同事激怒？
 你是否看到网上争论「年轻人该不该给老人让座儿」也会破口大骂？
 你是否期望，当负面的事情发生时，能够以豁达的心态，理性地对待，而不是被情绪所左右。
 
 **ABC 理论：情绪的诱发装置**
-* Activating Event，事件
-* Belief，信念
-* Consequence，结果
+
+-   Activating Event，事件
+-   Belief，信念
+-   Consequence，结果
 
 对于同一件事，每个人会做出不同的反应。比如，公交车上上来一位老人，有的人会让座儿，有的人不会让。因为大家的信念不同。
 如果我们想避免不好的结果出现，比如避免负面情绪，那么有两个办法，一是避免事件发生，比如不要看负能量的社会新闻。但这有点儿治标不治本的感觉，一劳永逸的办法是：改变自己的信念。
@@ -18,6 +23,7 @@
 那么换另一个场景，如果你走在大街上，有个陌生男人打你一下，你多半会有两种反应，要么是愤怒地回击，要么立马逃跑。因为在你的信念中，正常的成年人是不会随意地攻击别人的，他可能不太正常。为了安全，这时你的「下层脑」立马取得了身体的控制权，控制你的身体进行反击或逃跑。
 
 **如何改变响应模式？**
+
 1. 将「异常行为」加入信念清单
 2. 预演如何应对
 3. 常常更新
