--- a/src/pages/posts/学习小组第一次会议.md
+++ b/src/pages/posts/学习小组第一次会议.md
@@ -1,48 +1,61 @@
+---
+date: "2010-06-18"
+---
+
+<img src='/_image/image_2023-11-05-20-23-36.png'>
+
 今天第一次讨论非常成功，大家的积极性都很高。
 讨论出的结论如下：
 
 时间：
->每天中午12:30-13:00 可以在11:50左右去吃饭，不影响吃饭和午休；
+
+> 每天中午 12:30-13:00 可以在 11:50 左右去吃饭，不影响吃饭和午休；
 
 地点：
->会议室或一楼六棵树；
+
+> 会议室或一楼六棵树；
 
 频率：
->目前成员共5人，每天一个Topic，每人一周讲一次；
+
+> 目前成员共 5 人，每天一个 Topic，每人一周讲一次；
 
 话题范围：
->不限范围，只要对大家有用，大家感兴趣的；如果以后成员增加，话题太多的话就投票；
+
+> 不限范围，只要对大家有用，大家感兴趣的；如果以后成员增加，话题太多的话就投票；
 
 资料管理：
->用Github管理材料，材料包括PPT，代码，录屏，录音，录像等；
+
+> 用 Github 管理材料，材料包括 PPT，代码，录屏，录音，录像等；
 
 规划：
->第一步先解决“敢讲”的问题，然后再提高内容质量和演讲技巧，最后梦想一下用英语演讲的情景吧；
+
+> 第一步先解决“敢讲”的问题，然后再提高内容质量和演讲技巧，最后梦想一下用英语演讲的情景吧；
 
 名称：
->学习小组的名称很重要，因此我们留下一点思考时间，明天再来确定。
+
+> 学习小组的名称很重要，因此我们留下一点思考时间，明天再来确定。
 
 形式：
 
-- 每周五确定下一周的Topic；
-- 每次分享结束后听众应给与反馈；
-- 待补充；
+-   每周五确定下一周的 Topic；
+-   每次分享结束后听众应给与反馈；
+-   待补充；
 
 今天也初步提出了一些话题意向，果然是百家讲坛啊，看看都有什么：
 
-- 我为什么要去网吧玩游戏？
-- Dota入门与提高
-- 捕蛇方法
-- 追一个女孩８年的心得
-- 有效激励
-- Git入门
-- 敏捷开发
-- Android系列
-- 读书心得
-- 我的价值观
-- 汽车知识入门
-- 枪械知识入门
+-   我为什么要去网吧玩游戏？
+-   Dota 入门与提高
+-   捕蛇方法
+-   追一个女孩８年的心得
+-   有效激励
+-   Git 入门
+-   敏捷开发
+-   Android 系列
+-   读书心得
+-   我的价值观
+-   汽车知识入门
+-   枪械知识入门
 
-为了将大家的情绪再往上提一提，我决定明天先做第一个session，很高兴的是后面已经主动开始排队了。
+为了将大家的情绪再往上提一提，我决定明天先做第一个 session，很高兴的是后面已经主动开始排队了。
 
 让我们一起期待３个月后崭新的自己吧。
