--- a/src/pages/posts/学习小组第二次会议.md
+++ b/src/pages/posts/学习小组第二次会议.md
@@ -1,7 +1,14 @@
+---
+date: "2023-06-19"
+---
+
+<img src='/_image/image_2023-11-05-20-26-18.png'>
+
 今天学习小组进行了第二次分享，有一些小小的不顺利，主要有：
-一、演讲人以为是明天讲，也怪我前期沟通工作一到位；
-二、会议室找了好几个都有人在，没想到大家工作这么努力，中午都在开会呢；
-三、关于之前定的一天一次分享，有的同事认为太过频繁，经过讨论改成每周一、三、五分享。其实我是希望大家都能先讲上一两次，找找感觉，然后再听别人讲的时候也能和自己联系起来，这样收获会更大。我也思考了一下，不能让大家觉得很有压力，如果活动成了任务和负担，那样不会有任何效果，还是慢慢来吧。
+
+1. 演讲人以为是明天讲，也怪我前期沟通工作不到位；
+2. 会议室找了好几个都有人在，没想到大家工作这么努力，中午都在开会呢；
+3. 关于之前定的一天一次分享，有的同事认为太过频繁，经过讨论改成每周一、三、五分享。其实我是希望大家都能先讲上一两次，找找感觉，然后再听别人讲的时候也能和自己联系起来，这样收获会更大。我也思考了一下，不能让大家觉得很有压力，如果活动成了任务和负担，那样不会有任何效果，还是慢慢来吧。
 
 今天讲的是主题是游戏，没有用上我买的遥控笔，很是遗憾，非常期待下次能站起来讲。
 今天我充当了主持人这个角色，作用是讲开场白和结束语，使活动更加完整和流畅，同时还要提醒演讲者控制时间。
@@ -9,8 +16,10 @@
 
 下面是我今天的主持词，纯属虚构：
 开场白：
->大家好，我是今天的主持人李小波，很高兴能和这么多优秀的软件工程师一起度过这个愉快的中午。软件开发呢是一项强度非常大的工作，我们应该劳逸结合，才能保持健康的身体和良好的精神状态。所以今天呢，我们很荣幸地邀请到了全球知名的电脑游戏公司暴雨的创始人，ouyp先生，大家可能不知道，ou先生是一名资深的游戏工程师，曾经就职于微软，开发了像扫雷，接龙，红心大战这样的经典游戏。好的，下面的时间就交给ou先生了，请大家用热烈的掌声表示对ou先生的欢迎。
+
+> 大家好，我是今天的主持人李小波，很高兴能和这么多优秀的软件工程师一起度过这个愉快的中午。软件开发呢是一项强度非常大的工作，我们应该劳逸结合，才能保持健康的身体和良好的精神状态。所以今天呢，我们很荣幸地邀请到了全球知名的电脑游戏公司暴雨的创始人，ouyp 先生，大家可能不知道，ou 先生是一名资深的游戏工程师，曾经就职于微软，开发了像扫雷，接龙，红心大战这样的经典游戏。好的，下面的时间就交给 ou 先生了，请大家用热烈的掌声表示对 ou 先生的欢迎。
 
 结束语：
->好的，今天的演讲可谓是非常精彩，让我们再次用热烈的掌声感谢ou先生精彩的演讲。
-大家还有什么问题的话可以和ou先生私下交流，咱们今天的活动到这里就结束了。为了感谢大家的积极参与，组委会为大家准备了精美的纪念品，请大家到8层领取（其实我们只有7层楼）。
+
+> 好的，今天的演讲可谓是非常精彩，让我们再次用热烈的掌声感谢 ou 先生精彩的演讲。
+> 大家还有什么问题的话可以和 ou 先生私下交流，咱们今天的活动到这里就结束了。为了感谢大家的积极参与，组委会为大家准备了精美的纪念品，请大家到 8 层领取（其实我们只有 7 层楼）。
