--- a/src/pages/posts/2011年度总结.md
+++ b/src/pages/posts/2011年度总结.md
@@ -4,6 +4,8 @@ date: "2011/12/31"
 
 <img src='/_image/image_2023-11-04-21-17-37.png'>
 
+The unexamined life is not worth living.
+
 -   年初的时候有两个大计划“买房”和“结婚”，只完成了一个，婚结了，房没买
 -   做了 4 个月兼职，认识了几个很 nice 的创业前辈，
 -   每周六我会骑着自行车过去开会，吃了无数的烤鱼和羊蝎子。
