--- a/src/pages/posts/我如何读书.md
+++ b/src/pages/posts/我如何读书.md
@@ -1,107 +1,131 @@
-![](./_image/2017-04-06-10-43-12.jpg)
-# 为什么读书
-读书对我来说并不是特别轻松的事，尽管我看过很多「快速阅读」的理论，做过很多训练，但并没有炼成一目十行的本事，还是改不了逐字阅读的习惯。
+<img src="/_image/2017-04-06-10-43-12.jpg" alt="">
 
-所以相对于读书，我更喜欢通过听演讲，参加在线课程的方式来学习。
-读书对我而言，主要有两点作用，拓展知识面和提高能力。
+有人为了装 13 而读书，显然，我不是。
+我通过写博客装 13。
 
-## 拓展知识面
->智慧意味着自知无知。
+## 为什么读书
+
+读书对我来说并不是特别轻松的事，尽管我看过很多[《快速阅读》](http://book.douban.com/subject/3916049/)的理论，也通过舒尔特表，曼陀螺卡片等工具做过一些训练，但并没有炼成一目十行的本事，依旧改不了逐字阅读的习惯。所以相对于读书，我更喜欢通过听演讲，参加在线课程等更高效的方式来学习。
+比如观看一部两个人演完的小电影肯定比读几本成人文学花的时间更少，涨的姿势更多。
+
+读书对我而言，主要有两点作用，**拓展知识面**和**提高能力**。
+
+### 拓展知识面
+
+> 智慧意味着自知无知。
 
 想像在知识的海洋中，有一个球。球内是你已经掌握的知识，球外是无限的你不知道你不知道的知识。对，我没有敲错。球的表面是你知道你不知道的知识。
-你知道的越多，你的球越大，球的表面积也越大。也就是说，你知道的越多，你知道你不知道的就越多。
-所以很多读到博士的人觉得自己很无知。
-差点把自己绕晕了，回到主题。这类书包括历史、人物传记等。
+你知道的越多，球越大，球的表面积也越大。也就是说，你知道的越多，你知道你不知道的就越多。
+所以很多读到博士的人会觉得自己很无知。
+差点把自己绕晕了，回到主题。这类书包括历史、传记、文学、人文、科学等。
 
-## 提高技能
-但大多数时候，我读书是为了提高技能，更好的工作和生活。比如编程、管理、咨询、引导、肓儿等。
+### 习得技能
 
-这类书通常很实用，学完马上就可以应用到工作和生活中。比如：
-读过《咨询的奥秘》，我就可以跟客户讲：「铺得越广，摊得越薄」的「树霉酱定律」，要求以百米的速度跑完全程马拉松显然是不科学的。
-读过《Fun Retrospectives》，我就能引导团队以更有趣的方式做回顾会议。
-读过《Coding dojo handbook》我就能引导 Coding Dojo。
+比起漫无目的地读书，大多数时候，我是为了习得技能而读书。比如编程、管理、咨询、引导、肓儿等。
+这类书很实用，学完马上就可以应用到工作和生活中。比如：
+读过[《咨询的奥秘》](http://book.douban.com/subject/25785829/)，我就可以跟客户讲“铺得越广，摊得越薄”的“树霉酱定律”，要求以百米的速度跑完全程马拉松是不科学的。
+读过[《Fun Retrospectives》](https://leanpub.com/funretrospectives)，我就能引导团队以更有趣的方式做[回顾会议](http://www.seabornlee.cn/post/thoughtworks/retrospective)。
+读过[《The Coding Dojo Handbook》](https://leanpub.com/codingdojohandbook)我就能引导 Coding Dojo。
+诸如此类。读过之后马上进行应用，用实践来检验理论，将知识转化为能力。
 
-诸如此类。读过之后马上就能进行应用，用实践来检验理论，将知识转化为能力。
+### 娱乐
 
-## 娱乐放松
-我不愿意读小说，因为一读就停不下来，加上我读书很慢，小说通常都很长。所以我读过一些小说，但从来没有读完过，因为当我意识到我沉迷其中时，我会毫不犹豫地删掉它。
-
+我不愿意读小说，因为一读就停不下来，小说通常都很长，而我读书很慢。所以我读过一些小说，但几乎没有一本读完过，因为当我意识到我沉迷其中时，我会毫不犹豫地删掉它。
 比起小说，我更愿意通过电影来娱乐。只因为它独立且短小。
 
-# 读什么书？
->你读书这么慢，就不要什么书都读了。
+## 读什么书
 
-因为读书慢，所以我更愿意多花一些时间在挑书上，读到不好的书也赶紧扔掉。
+> 你读书这么慢，就不要什么书都读了。
 
-## 行业经典
->你不是读书少，是经典读的少。
+因为读书慢，所以我更愿意多花一些时间在挑书上，读到不好的书也会赶紧扔掉。
+
+### 行业经典
+
+> 你不是读书少，是经典读的少。
 
 不知道什么时候看到过这句话，如醍醐灌顶。从此我将“经典”列为读书列表的最高优先级。
-比如：《代码大全》，《SICP》，《重构》，《你的灯亮着吗》等。
+比如：[《代码大全》](http://book.douban.com/subject/1477390/)，[《计算机程序的构造和解释》](http://book.douban.com/subject/1148282/)，[《重构》](http://book.douban.com/subject/4262627/)，[《你的灯亮着吗》](http://book.douban.com/subject/25772550/)等。
 
-## 同行推荐
+### 同行推荐
+
 微博和微信里总会有一些同行会时不时晒一些好书，或者对一些烂书吐槽。这样我就能将时间花在读好书上而不是浪费在烂书上。
 
-## 随机发现
+### 随机发现
+
 多看阅读里每天会有限免图书，我也会去刷一下，但感兴趣的不多。通常只是下载，放在读书列表最后面。
 
-# 怎么得到书
-对于我这种 Homeless（无家可归）的人来讲，纸质书绝对是搬家时的一大痛，也因此每次搬家都会清掉很多旧书。所以我偏爱电子书。
+## 怎么得到书
 
-## 电子书
-对于中文书，我首先会在「多看」进行搜索，很便宜且阅读体验好。「多看」上找不到我再尝试到 Kindle 商店去找。
-英文书通常可以直接在国外网站进行购买，比如 Leanpub 和 Pragmatic Bookshelf。
+对于我这种 Homeless 来讲，纸质书绝对是搬家时的一大痛，每次搬家都会清掉很多旧书。所以我偏爱电子书。
 
-## 纸质书
-实在找不到电子书，我就上「京东」或者「Amazon」买纸质书，因为送货快，我可以在热情没有削减时就拿到手开始阅读。
+### 电子书
 
-# 怎么读
-书拿到手了，最重要的是去读它，而不是把收藏当成是学习。
+对于中文书，我首先会在“多看”进行搜索，很便宜且客户端阅读体验好。“多看”上找不到我再尝试到 Kindle 商店去找。
+英文书通常可以直接在国外网站进行购买，比如[Leanpub](https://leanpub.com)和[Pragmatic Bookshelf](https://pragprog.com/)。
+我通常使用 iPhone 或者 iPad 读，我的 Kindle Paperwhite 一代反应实在太慢了，只在飞机上才会用。
 
-记得上大学时，上网还是很贵的，一寝室凑钱买上网卡，只能晚上人齐了才能拨号上网。在那样的条件下，在线学习是非常奢侈的，所以通常都是采用「Read it later」的方式，晚上下载，等白天看，可是白天上课又没时间看，晚上又继续下载。就在这样一种环境下养成了囤积的毛病，在硬盘里囤积了无数的电子书和视频教程。现在还是不能停药，在 Pocket、微信、微博里收藏了许多的文章。但我强迫自己在年底最后一天一定要全部清理掉，该读的读，该删的删。
+### 纸质书
 
-经典的《How to read a book》讲了读各种书的方法，这本书对我的阅读习惯影响颇深。在这里不讨论具体的方法，分享一下我遵循的几个原则：
+实在找不到电子书，我就上“京东”或者“Amazon”买纸质书，因为送货快，我可以在热情没有削减时就拿到手开始阅读。
 
-## 不逼自己读
-尽管读的是经典或者同行推荐的好书，但并不一定就适合我，或者适合现阶段的我。
-所以当读一本让我痛苦时，我会把它暂放下，或换一本更加基础的，或待以后有一些阅历之后再读。比如：《管理 3.0》。在我还是一个纯纯的 Developer 的时候，读起来是索然无味，待开始领导团队之后，遇到过一些实际问题之后，便能与作者产生共鸣，读起来就很享受。
+## 怎么读
 
-## 不以读完为目标
-每次搬家的时候，我老婆总是望书兴叹：“买这么多书，你有几本是读完的了？”我总是反问她，为什么我要把每一本书都读完？
-把书从头到尾读完，就像从A到Z背单词一样无聊。我认为那是应试教育养成的恶习。而且现在的图书，作者在写作时都力求章节间相对独立，方便大家选择感兴趣的部分进行阅读。
-在《这样读书就够了》一书中，作者的观点与我一样，不应以读完为目标，而应该重视如何将书中的知识应用到工作中，学会一点便不亏了，学会两点就赚大发了。
+> 书拿到手了，最重要的是去读它，而不是把收藏当成是学习。
 
-## 不以记住为目标
-有些书教导我们，读完书后要能默写出提纲，以及作者在各章的主要观点。我认为这也是应试教育的恶习。
-我学到一个知识，应当迅速将它纳入自己的知识体系，一段时间后，当我和别人谈论的时候，我才不在乎这个观点是我自己思考出来的，还是从某本书的第几页第几行看到的。
+记得上大学时，上网还是很贵的，一寝室同学凑钱买上网卡，晚上人齐了才能拨号上网。在那样的条件下，在线学习是非常奢侈的，所以通常都是采用“Read it later”的方式，晚上下载等有时间再看，可是白天上课又没时间看，晚上一连上网又认为不下载就是罪孽。就在这种环境下养成了囤积的毛病，在硬盘里囤了无数的电子书和视频教程。现在还是不能停药，在 Pocket、微信、微博里收藏了许多的文章。但我强迫自己在年底最后一天一定要全部清理掉，该读的读，该删的删。
 
-## 带着问题读书
-在开始读一本书之前，我通常会问自己几个问题，带着问题去读，能帮助我更加专注，跳过那些不重要的，或者现在对我不重要的知识。
-比如对于《共创式教练》一书，在翻开之前我就列出如下几个问题：
-* 什么是共创式？
-* 为什么要共创？
-* 它的应用场景是什么？
-* 我如何在工作和生活中应用？
+经典的[《How to Read a Book》](http://book.douban.com/subject/1383525/)讲了读各种书的方法，这本书对我的阅读习惯影响颇深。在这里不讨论具体的方法，分享一下我遵循的几个原则：
 
-在读的过程中，可能又会提出新的问题，没关系，加到列表里，一个一个解决。
+### 不逼自己读
 
-## 设置WIP
-多任务是低效的。所以我通常会限制自己最多同时读两本书。
+尽管读的是经典或者同行推荐的好书，但并不一定就适合我，或者适合现阶段的我。所以当读一本书让我痛苦时，我会把它放下，或换一本更加基础的，或待以后有一些阅历之后再读。比如：[《管理 3.0》](http://book.douban.com/subject/10484469/)是一本好书，但在我还是一个静静的 Developer 的时候，读起来是索然无味的。待开始领导团队，遇到过一些实际问题之后，便能与作者产生共鸣，读起来就很享受。
 
-## 设置 Dead line
+### 不以读完为目标
+
+> 常在江湖漂，哪能不搬家。
+> 每次搬家的时候，老婆总是望书兴叹：“买这么多书，你有几本是读完了的？”
+> 我反问她，为什么我要把每一本书都读完？
+> 把书从头到尾读完，就像从 A 到 Z 背单词一样无聊。我认为那是应试教育养成的恶习。
+> 而且现在的图书，作者在写作时都力求章节间相对独立，为的就是方便大家选择感兴趣的部分进行阅读。
+
+在[《这样读书就够了》](http://book.douban.com/subject/20493042/)一书中，作者的观点深得我心，不应以读完为目标，而应该重视如何将书中的知识应用到工作中，学会一点便不亏了，学会两点就赚大发了。
+
+### 不以记住为目标
+
+有些观点认为，读完书后要能默写出提纲，以及作者在各章的主要观点。我认为这也是应试教育的恶习。
+我学到一个知识，应当迅速将它纳入自己的知识体系。一段时间后，当我和别人聊天的时候，我才不在乎这个观点是我自己思考出来的，还是从某个作者的某本书的第几章第几节看到的。
+
+### 带着问题读书
+
+在开始读一本书之前，我通常会问自己几个问题，带着问题去读，能帮助我更加专注。
+比如对于[《共创式教练》](http://book.douban.com/subject/25839505/)一书，在翻开之前我就列出如下几个问题：
+
+-   什么是共创式？
+-   除了共创式还有什么式？
+-   为什么要共创？
+-   它的应用场景是什么？
+-   我如何在工作和生活中应用？
+
+在读的过程中，可能又会提出新的问题，没关系，加到列表里，一个一个去“问”作者。
+
+### 设置 WIP
+
+多任务是低效的。所以我通常会限制自己最多同时读两本书。两种不同类型的书交替阅读可以换换脑子。
+
+### 设置 Dead line
+
 虽然不逼自己读无趣的书，但人天生是有惰性的，虽然我很想读，但我的注意力可能会被“朋友圈”的各种新鲜事吸引。
-所以我必须给当前在读的书设置一个 Dead line，并且给自己一些激励，比如读完（并非逐页读完）一本书后奖励自己买一个iOS小游戏玩玩。
+所以我必须给当前在读的书设置一个 Dead line，并且给自己一些激励，比如读完（并非逐页读完）一本书后奖励自己买一个 iOS 小游戏玩玩。
 
 ## 实践与分享
-通过阅读，我获得了作者的知识和经验，但必须要我亲自实践后才能将其转化为我的能力和经验。比如我通过《Test Driven Development by Example》学习 TDD，然后在工作中去应用，再在社区去分享自己的经验。
 
-我认为读书并不是最好的学习方式，因为你不能和作者互动，不能获得作者最新的想法。我以我更喜欢面对面的交流，知识是最新的，而且可以交互。所以我非常愿意通过社区活动与人分享。这样听我分享的人便走了一条捷径。
+通过阅读，我获得了作者的知识和经验，但必须要我亲自实践后才能将其转化为我的能力和经验。比如我通过[《Test-Driven Development By Example》](http://book.douban.com/subject/1771049/)学习 TDD，然后在工作中去应用，再在社区去[分享自己的经验](http://www.seabornlee.cn/post/huo-dong/gdcr-2013-shen-zhen-zong-jie)。
 
----
+我认为读书并不是最好的学习方式，因为你不能和作者互动，书中的知识也可能过时。
+我更喜欢面对面的交流，所以我非常愿意通过社区活动与人分享，这样听我分享的人便走了一条捷径。
 
->书山有路勤为径，~~学海无涯苦作舟~~。
+> ~~书山有路勤为径，学海无涯苦作舟~~。
 
-我认为学习不应该是辛苦或痛苦的，而是一个满足自己好奇心和求知欲的极富成就感的快乐的过程。
+我认为学习不应该是辛苦或痛苦的，而是**_一个满足自己好奇心和求知欲的极富成就感的快乐的过程_**。
 人生苦短，干嘛非要和自己死磕，去学那些不感兴趣的，学起来辛苦和痛苦的东西？
-
-我更喜欢在有天赋的领域快乐地学习，事半功倍地成长。
+我更喜欢[搞清楚自己的优势](http://book.douban.com/subject/10799765/)之后，在有天赋的领域快乐地学习，事半功倍地成长。
