--- a/src/pages/posts/我的父亲.md
+++ b/src/pages/posts/我的父亲.md
@@ -1,5 +1,12 @@
->我的父亲，身高一米八，体重一百八。
+---
+date: "2022-01-30"
+---
+
+<img src="/_image/image_2023-11-05-23-43-50.png" alt="">
+
 上一次记录我的父亲，是在高中的时候，学校布置的一篇作文。
+
+> 我的父亲，身高一米八，体重一百八。
 
 自从有了女儿后，爱人不止一次跟我说，我对待女儿的方式，和对待儿子的方式很不一样。
 这就引起了我的反思，我就在想我对儿子的教育方式，与父亲对我的教育有什么联系。
