--- a/src/pages/posts/技术教练团队对于企业的意义.md
+++ b/src/pages/posts/技术教练团队对于企业的意义.md
@@ -1,21 +1,38 @@
-技术教练团队对于企业的意义
-痛点
-数字化转型迫切
+---
+date: "2021-02-01"
+---
+
+<img src="/_image/image_2023-11-05-23-49-50.png" alt="">
+
+为什么企业需求技术教练团队？
+
+## 痛点
+
+_转型迫切_  
 数字化转型中，持续交付的能力是核心能力。要实现持续交付，需要 CI/CD 流水线，微服务架构，容器化等新的技能。其次必须把质量工作前移，从检测变成预防，让开发人员对质量负责。传统的开发负责功能开发，测试人员负责质量保障的模式，几个弊端：
-发现问题相对较晚，修复成本更高，还有开发人员与测试人员之间的沟通成本和开发人员在开发新功能和修复缺陷之间的多任务切换导致的效率损失。
-测试周期长，不能频繁执行回归测试，不能随时有信心重构代码，以保持灵活性。
-测试团队膨胀，导致沟通管理成本变高。
+
+-   发现问题相对较晚，修复成本更高，还有开发人员与测试人员之间的沟通成本和开发人员在开发新功能和修复缺陷之间的多任务切换导致的效率损失。
+-   测试周期长，不能频繁执行回归测试，不能随时有信心重构代码，以保持灵活性。
+-   测试团队膨胀，导致沟通管理成本变高。
+
 相对而言，CI/CD，微服务，容器化属于基础设施，只需要部分人掌握即可，业务开发工程师只要学会使用，成本不高。但业务开发工程师必须学会编写测试代码和重构代码的技术。由于行业普遍缺乏基本功的现实，需要培养的人数众多，通过引入外部技术教练可以缩短培养周期，更快看到效果，但外部技术教练本身也很稀缺，在数字化转型的大潮中，价格也水涨船高，并且因为市场需求大，导致难以长期高投入度地服务于同一家企业。另外，由于行业特殊性，尤其金融行业的业务复杂度较高，外部教练也需要花时间熟悉业务才能指导业务开发，否则只能隔靴搔痒。
-招聘市场竞争压力大
+
+_招聘市场竞争压力大_  
 毕业生招聘市场压力大，优质学生被大厂高年薪争夺。
-经验流失
+
+_经验流失_  
 企业内部的资深工程师，除了架构，技术管理，转业务，多年积累的丰富经验，可能不能得到很好的传承，加上上层的岗位数量有限，导致资深工程师人才流失。
+
 建设内部教练队伍的好处：
-支持数字化转型
+
+_支持数字化转型_  
 用内部教练团队，通过开展培训和辅导，加速企业数字化转型。
-用培养体系来降低选人门槛
+
+_用培养体系来降低选人门槛_  
 技术人才培养一直是 HR 的难题，基于内部教练团队发展出技术人才的胜任力模型，课程体系和导师池，建立师傅带徒弟的培养模式，可以有效降低人才招聘的门槛。
-雇主品牌
+
+_雇主品牌_  
 有内部教练团队，本身是一种工程师文化的体现，对于雇主品牌形象加分效果明显，更能吸引到优质的技术人才。
-资深人才的多元化上升通道
+
+_资深人才的多元化上升通道_  
 资深开发人员，对业务和管理都不感兴趣，热爱培养他人，有了施展的舞台，也能够获得价值上的认可。更能留着这些经验丰富的资深人才，并且将他们的经验传承下来。
