--- a/src/pages/posts/是时候停止找捷径了，开始练习吧.md
+++ b/src/pages/posts/是时候停止找捷径了，开始练习吧.md
@@ -1,14 +1,22 @@
+---
+date: "2017-02-27"
+---
+
+<img src="/_image/2017-02-27-21-45-51.jpg" alt="">
+
 我兴趣非常广泛，什么都想学。
 在学习上也没少花钱：
-* 花几百块参加过段子训练营；
-* 花几千块参加过视觉引导工作坊；
-* 花几万块参加过华尔街英语；
+
+-   花几百块参加过段子训练营；
+-   花几千块参加过视觉引导工作坊；
+-   花几万块参加过华尔街英语；
 
 这不，昨天又报了一个三万多的 TTT 课程。
 
 原来总期望找到捷径，期望快速掌握某项技能。
 开始做培训后，越发觉得，学习其实很简单，只要你相信一点：
->没有捷径，必须进行练习。
+
+> 没有捷径，必须进行练习。
 
 现在是信息过载的时代，我们每天读朋友圈里的文章，听一段罗辑思维的语音，看一本书。
 我们沉迷于获得知识的满足感无法自拔，但对于技能学习而言，知识的作用是有限的。
@@ -18,70 +26,76 @@
 对，我并不是在练习具体的技能，而是练习如何练习，培养练习的习惯。
 到目前为止，我练习了手绘 20 天，幽默 15 天，写作 12 天。
 请看成果：
-![](./_image/2017-02-27-21-22-03.jpg)
+![](/_image/2017-02-27-21-22-03.jpg)
 
+![](/_image/2017-02-27-21-25-52.jpg)
 
-![](./_image/2017-02-27-21-25-52.jpg)
-
-![](./_image/2017-02-27-21-28-51.jpg)
+![](/_image/2017-02-27-21-28-51.jpg)
 
 其实上面这些并不能叫练习的成果，真正的成果，是你正在读的这篇文章。
 
 ## 怎么练习
+
 《刻意练习》这本书告诉我们，有效的练习必须符合几个原则：
-* 目标清晰
-* 专注
-* 重复
-* 反馈
+
+-   目标清晰
+-   专注
+-   重复
+-   反馈
 
 拿手绘练习来说，我每天画 1 到 2 页，重复地画一个图形，练习时一心一意，练完拍照发到群里接受点评。
 拿幽默练习来说，每天从六个方面观察和思考，积累一个素材，发到群里，导师 Kevin 会给每一个人点评。
 对于写作，我每天写一篇千字左右的文章。
 
 ## 真正的收获
+
 ### 画画
+
 刚开始，我觉得应该一笔画完，重复画同一个图形，练成肌肉记忆，这样以后才可以无需思考，很快画出来。
 
-![](./_image/2017-02-27-21-36-57.jpg)
+![](/_image/2017-02-27-21-36-57.jpg)
 
 有一天，我突然发现握笔的手很紧张，下笔也很用力，我开始刻意观察自己，让自己放松、平静。
 画了几天，会画的图标和形状越来越多了，我就在思考，才练了几天，我就能画不少东西了，为什么有些人从小就学习美术，每天画几个小时，而且还去读美院呢。
 慢慢地我发现，虽然这些图形很简单，都是基本图形，但却很难把它画得好看。
 画圆不圆，画方不方，画线不直。
 我才知道，他们每天练习的是扎实的基本功，是对画笔的掌控能力，练到把笔变成手的延伸，可以随心所欲地使用的能力。
->业余选手练习到做对为止，而专业选手练习到不会做错为止。
 
+> 业余选手练习到做对为止，而专业选手练习到不会做错为止。
 
-![](./_image/2017-02-27-22-08-32.jpg)
+![](/_image/2017-02-27-22-08-32.jpg)
 
 ### 幽默
+
 上周刚结束一场培训，大家说我的特点是一本正经地讲段子。
 
-![](./_image/2017-02-27-21-45-51.jpg)
+![](/_image/2017-02-27-21-45-51.jpg)
 
 我就在思考，这和这段时间的练习有没有关系呢？
 我发现我讲的段子并不是我平时积累的那些素材，很多是即兴创作的。
 因为我自己都没有预先设计，所以才会那么一本正经并出人意料。
 我领悟到：
->每天的素材积累，其实重点不是积累了多少素材，而是练习**认真观察的态度**和**幽默的思维方式**。
+
+> 每天的素材积累，其实重点不是积累了多少素材，而是练习**认真观察的态度**和**幽默的思维方式**。
 
 有了这两个东西，看到什么东西都可以变成素材，段子信手拈来。
 
 ## 写作
-还有写作，写到第 12 天了，也有了一些心得，稍后单独写一篇文章来分享。
 
----
+还有写作，写到第 12 天了，也有了一些心得，稍后单独写一篇文章来分享。
 
 总而言之，才短短不到一个月的练习，就有不少的领悟。
 这些都在书上看到过，但真正自己领悟后感觉完全不一样：
-* 想要掌握技能，练习是不可避免的
-* 练习要目的明确，专注，重复，有反馈
-* 比起过程，练习的产出物不重要
-* 练习时应该关注自己是否平静，身体是否放松，精神是否专注
-* 每天坚持，相信日拱一卒的力量
+
+-   想要掌握技能，练习是不可避免的
+-   练习要目的明确，专注，重复，有反馈
+-   比起过程，练习的产出物不重要
+-   练习时应该关注自己是否平静，身体是否放松，精神是否专注
+-   每天坚持，相信日拱一卒的力量
 
 最后，推荐两本书：
-* [《刻意练习》](https://book.douban.com/subject/26895993/)
-* [《练习的心态》](https://book.douban.com/subject/26911425/)
+
+-   [《刻意练习》](https://book.douban.com/subject/26895993/)
+-   [《练习的心态》](https://book.douban.com/subject/26911425/)
 
 如果你真的想要掌握一项技能，停止读更多的文章，看更多的视频，参加更多的培训班，开始练习吧！
