--- a/src/pages/posts/沟通能力对程序员有多重要？.md
+++ b/src/pages/posts/沟通能力对程序员有多重要？.md
@@ -28,7 +28,7 @@ date: "2018-03-19"
 
 有的程序员会举出一些特例来说明「就算不会沟通表达，也能成为技术大牛」，比如 Linux 和 Git 的创始人 - Linus。
 
-![](./_image/2018-03-19-10-06-05.jpg)
+![](/_image/2018-03-19-10-06-05.jpg)
 
 这其实是一种偏见，能出现在公众视野里的技术牛人，他们的技术很牛毋庸置疑，但他们一定在其他方面也很牛，就拿 Linus 来说，能吸引如此多程序员为他的项目贡献代码，说明他在影响他人方面的能力也是很强的。能让 Linux 成为企业服务器的首选，说明他在产品设计和营销方面的能力也是不可忽视的。
 世界上可能真的存在一些「纯」技术牛人，可是这样的人压根儿就不会进入公众视野。我们耳熟能详的这些技术牛人，其实他们在产品设计、营销、管理方面的能力也很强。之所以没有被正确认识，有两方面的原因：一方面因为他们的技术太强，相对而言其他方面就显得弱了一点；另一方面是媒体报道时，放大一个人的特点，才更有吸引力。
