--- a/src/pages/posts/游戏化养育.md
+++ b/src/pages/posts/游戏化养育.md
@@ -1,3 +1,9 @@
+---
+date: "2019-08-01"
+---
+
+<img src="/_image/image_2023-11-06-18-02-44.png" alt="">
+
 在我还是孩子的时候，父亲对我的要求很严厉。
 早上起床不能太晚，印象中差不多是 8 点，起床后不能赖在床上，要立即穿好衣服，整理好床铺，洗脸刷牙......
 
@@ -15,14 +21,13 @@
 类似的事情前不久也发生在了佐佐身上，回想起那一幕让我愈发挫败。
 我真是个失败的父亲，起码在揍儿子的两个时刻，我是彻底失败的。
 
-- - - - - 
 清晰记得之前最后一次对孩子动手，是 2019 年在黄果树瀑布旅游的时候，那次不走运的是佐佐。
 后来就跟老婆说好了，孩子大了，不打了。
 没想到守了两年多，还是破了戒。
 
 我很快意识到，是我的焦虑让我失去耐心，我开始调整心态，补充知识，于是读到一本很棒的书《游戏化养育》。
 于是我立马付诸实践，发现真的太实用了。
-- - - - -
+
 又是一个早晨，8 点多，我在客厅听到儿子差不多要醒了，于是蹑手蹑脚地走到他们房间，悄悄地躺在他们床上。
 然后伸了个懒腰，大声说：“咦，你们怎么跑到我的床上来了？”
 “你们把妈妈藏哪儿了？”
@@ -52,15 +57,16 @@
 佐佐说：“它蒙住你的眼睛，你也看得见，因为它是隐身的啊。”
 ......
 你一言我一语，车内又洋溢着欢乐的氛围。
-- - - - - 
+
 我也会想，在大庭广众之下跟孩子装疯卖傻，要是还被孩子拒绝，岂不是很尴尬。
 《游戏化养育》作者老爷子说了，当着众人对孩子歇斯底里，难道就不尴尬。
 根据我几次的实践，发现他们会立刻会意，欣然接受游戏邀请。
 
 老爷子还强调，游戏的目的只是「联结」，不要总是想通过游戏教会孩子点什么道理。
 满足了孩子的情感需求，得到了充分的陪伴和关注，孩子才会有动力和安全感去探索世界。
-- - - - - -
+
 我很高兴读到这本书，并且希望它也对你有用。
 
 后记：
+
 > 文章差不多快要写完的时候，听到儿子醒了。出差这一周，买了一个新的游戏手柄，他们盼望着我回来跟他们一起玩三人游戏。所以我放下键盘，跑到他们房间和他们玩了一会儿，并且问他们是否愿意 9 点钟一起玩三人游戏。他们高兴地洗脸刷牙，然后跑过来看我写文章，问了我怎么打字，文章发表在哪里。然后我把他们搂在怀里，用文字转语音，把文章读给他们听了一遍。佐佐还补充了我们对话的细节。
