--- a/src/pages/posts/经验是智慧的障碍.md
+++ b/src/pages/posts/经验是智慧的障碍.md
@@ -1,3 +1,9 @@
+---
+date: "2021-12-21"
+---
+
+<img src="/_image/image_2023-11-06-18-44-48.png" alt="">
+
 在培训时谈到单元测试，学员会有很多疑问，包括不认可，觉得成本过高，当然这方面我们是很有经验的，于是我们就会去和他们讲道理，期望能说服他们，却始终无法说服。
 直到我们看到他们的单元测试，才知道我们说的根本不是同一个东西，他们说的单元测试是开发人员要自测，并且把案例和执行结果截图填到一个「单元测试报告」里。
 
@@ -12,22 +18,23 @@
 
 当有人说「单元测试成本太高，收益太小」时，先让他打开电脑，看看 TA 说的单元测试是什么。
 当有人说「回顾会议时间太长，没什么用」时，先问问：
-* 能分享一下你们是怎么开的吗？
-* 你们得出了什么改进项呢？
-* 这些改进项落地得怎么样？
-* 有得到预期的收益吗？
-* 你觉得有价值的回顾会议应该是什么样呢？
 
-- - - - - 
+-   能分享一下你们是怎么开的吗？
+-   你们得出了什么改进项呢？
+-   这些改进项落地得怎么样？
+-   有得到预期的收益吗？
+-   你觉得有价值的回顾会议应该是什么样呢？
+
 我是三个孩子的父亲，孩子呱呱坠地时，都是一张白纸，会说话以后，就会不停地问为什么。
 问得多了，问得深了，触及了我的知识盲区，也难免表现出不耐烦。
 所以慢慢地，孩子可能形成「思考是不受欢迎的」的想法，开始接受父母和老师经验，文化传统和习俗，停止了质疑一切的独立思考。
 
 按照社会既定的模式，努力读书，拼命工作，存钱买房，挣钱养家...
 直到某一天，发现还是有很多困惑找不到答案。
-* 为什么拥有越多，还想要拥有更多？
-* 为什么职位越高，压力越大？
-* 为什么有房有车，有妻有子，依然不快乐？
+
+-   为什么拥有越多，还想要拥有更多？
+-   为什么职位越高，压力越大？
+-   为什么有房有车，有妻有子，依然不快乐？
 
 于是开始拥抱哲学，关注灵性成长。
 佛陀说的「空性」，教练技术说的「无知，好奇」，萨古鲁说的「经验不是智慧」，《零极限》说的「一生最重要的事就是清空」，
@@ -35,13 +42,14 @@
 说的都是一个意思。
 
 开始清空自己的记忆和经验，重新思考一切：
-* 为什么一天要吃三顿饭，睡 8 小时？
-* 为什么人要上班，鸟儿不用上班？
-* 如果人类也像鸟儿一样自给自足，吃饱穿暖即可，是否会更幸福？
-* 公园里的鸟如果不叫，人们可能就不会去公园散步，公园就会疏于管理，就会有人去打鸟。鸟儿在公园里雀跃和鸣叫，是不是和人类达成了一种默契，其实也是在「上班」？
-* 为什么自律就是早起，运动和读书？
-* 为什么孩子一定要送去学校，为什么父母一定要去公司上班？
-* ......
+
+-   为什么一天要吃三顿饭，睡 8 小时？
+-   为什么人要上班，鸟儿不用上班？
+-   如果人类也像鸟儿一样自给自足，吃饱穿暖即可，是否会更幸福？
+-   公园里的鸟如果不叫，人们可能就不会去公园散步，公园就会疏于管理，就会有人去打鸟。鸟儿在公园里雀跃和鸣叫，是不是和人类达成了一种默契，其实也是在「上班」？
+-   为什么自律就是早起，运动和读书？
+-   为什么孩子一定要送去学校，为什么父母一定要去公司上班？
+-   ......
 
 所谓觉醒，或者开悟，可能就是，意识到自己正在别人设定好的轨道上「自动驾驶」。
 开始设定目的地，接管方向盘，掌控刹车和电门（对不起，我开电车）。
