--- a/src/pages/posts/带孩子旅居大理，一年要花多少钱？.md
+++ b/src/pages/posts/带孩子旅居大理，一年要花多少钱？.md
@@ -2,12 +2,12 @@
 date: "2023-11-09"
 ---
 
-![](/_image/image_2023-11-09-20-12-41.png)
+<img src='/_image/image_2023-11-09-20-12-41.png'>
 
 上一篇文章发布后，好多朋友关心大理的学费和生活成本。这就借由我们的经历，给大家做个参考。
 
 我们看了几所学校，孩子们上的两所学校，学费加生活费大概四五万一年。相比一线城市私立学校动辄二三十万的学费，基本可以忽略不计，所以有这么多北上广深的妈妈带着孩子过来旅居，爸爸继续留在大城市搞钱。一边让孩子接受新教育，一边借助大理的自然环境和丰富的身心灵社区疗愈自己。
-<img src='/_image/image_2023-11-09-20-23-12.png'>
+![](/_image/image_2023-11-09-20-23-12.png)
 
 七月底我们打包了成都的家，接近 50 个箱子，让中介把房子挂牌出售。
 ![](/_image/image_2023-11-09-20-12-27.png)
@@ -68,3 +68,4 @@ date: "2023-11-09"
 说说物价，这边的蔬菜和肉感觉和一线城市也差不多价格，但是猪肉的品质很不错，在成都普通猪肉煮出来有股腥味儿，在盒马买 70 元一斤的猪肉煮出来才有香味，这边只要 17 块就有同等品质。在下阳波下馆子很便宜，但是在龙龛码头下饭馆都是景点价格。
 
 总的来说，苍山洱海，风花雪月并不是免费的，而且现在还处在市场高点，要来的话做好心理准备哦。
+如果要来旅居，可以提前在某瓣搜索“大理”相关的小组，有非常多的房源。
