--- a/src/pages/posts/带孩子旅居大理，一年要花多少钱？.md
+++ b/src/pages/posts/带孩子旅居大理，一年要花多少钱？.md
@@ -69,3 +69,4 @@ date: "2023-11-09"
 
 总的来说，苍山洱海，风花雪月并不是免费的，而且现在还处在市场高点，要来的话做好心理准备哦。
 如果要来旅居，可以提前在某瓣搜索“大理”相关的小组，有非常多的房源。
+![](/_image/image_2023-11-09-20-48-47.png)
