--- a/src/pages/posts/我把娃独自留在大理的餐馆.md
+++ b/src/pages/posts/我把娃独自留在大理的餐馆.md
@@ -10,6 +10,7 @@ date: "2023-11-15"
 傍晚，我接完妹妹接哥哥，在学校附近的一个清真餐馆吃晚饭，整个院子就我们一桌，哥哥吃完了，妹妹还在吃，这时 JD 小哥送洗衣机到客栈，我要过去收货验货，妹妹坚持还要继续吃，我就让哥哥们陪着妹妹继续吃，我先去收货。大约半小时后，回来接他们，他们在院子里和餐馆的奶奶玩得很开心。
 
 之前我们在北京，深圳和成都都生活过多年，在那样的超级城市，这样平常的事是不会发生的。
+也让我对 It takes a village to raise a child（养育孩子需要整个村庄）有了一点点体会。
 
 没来大理之前，听一个播客，说生活在熟人社会，会让人潜意识更放松，相反在大城市里每天在写字楼，商场，公交和地铁上，会遇到大量的陌生人，身体和头脑会不自己地处于戒备紧张的状态。于是，对大理多了一分向往。
 来大理后，发现常住的人也确实不多，大家常去活动的地方也就那几个，所以没来多久已经偶遇过好多次熟人了。
